# Physical-AI-Humanoid-Robotics

./: .gitignore  README.md  docusaurus.config.js  package-lock.json  package.json  sidebars.js  tailwind.config.js  tsconfig.json
backend/: requirements.txt
backend/ai_robot_brain/: CMakeLists.txt  README.md  __init__.py  package.json  requirements.txt  setup.py
backend/ai_robot_brain/isaac_sim/: isaac_sim_bridge.py
backend/ai_robot_brain/isaac_sim/synthetic_data/: synthetic_dataset_generator.py
backend/ai_robot_brain/perception/: perception_node.py
backend/ai_robot_brain/perception/detection/: perception_node.py
backend/ai_robot_brain/perception/training/: perception_training_node.py
backend/ai_robot_brain/perception/vslam/: vslam_node.py
backend/ai_robot_brain/ros_bridge/: isaac_sim_bridge.py
backend/digital_twin/: IMPLEMENTATION_SUMMARY.md  README.md  package.json  requirements.txt  setup_venv.py
backend/vla_module/: CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  README.md  requirements.txt  setup.py
docs/: control-systems.md  embodied-intelligence.md  humanoid-design.md  overview.md  physical-ai-foundation.md  robot-locomotion.md
ros2_labs/week1_foundation/: CMakeLists.txt  package.xml  setup.cfg  workspace_setup.py
ros2_labs/week1_foundation/demo_nodes/: simple_nodes.py
ros2_labs/week1_foundation/mini_project/: sensor_nodes.py
ros2_labs/week2_communication/: CMakeLists.txt  communication_labs.md  package.xml  qos_lab.md  setup.cfg
ros2_labs/week2_communication/debugging_challenge/: debugging_challenges.md
ros2_labs/week2_communication/mini_project/: remote_robot_controller_project.md
ros2_labs/week3_ai_bridge/: CMakeLists.txt  hackathon_demo_system.md  package.xml  setup.cfg  visualization_lab.md
ros2_labs/week3_ai_bridge/ai_robot_project/: ai-controlled-robot-project.md
specs/001-physical-ai-textbook/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-ai-native-textbook/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-ros2-module/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-vla-module/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-frontend-interface/: data-model.md  plan.md  quickstart.md  research.md  spec.md
specs/main/: data-model.md  quickstart.md  research.md  tasks.md
specs/module-02-digital-twin/: spec.md
specs/module-03-ai-robot-brain/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/config/: environment.ts
src/css/: custom.css
src/i18n/: index.ts
src/pages/: index.js
src/services/: ApiClient.ts  api.ts  auth.ts
src/types/: Chapter.ts  Course.ts  Exercise.ts  Progress.ts  Project.ts  Simulation.ts  User.ts
(+281 files in other folders)
