[project]
name = "week1_foundation"
version = "0.0.0"
description = "Week 1 Foundation package for ROS 2 learning module"
authors = ["student <student@todo.todo>"]
license = "TODO: License declaration"

[tool.setuptools]
py-modules = ["week1_foundation"]

[build-system]
requires = ["setuptools", "ament_copyright", "ament_flake8", "ament_pep257"]
build-backend = "setuptools.build_meta"