[project]
name = "week3_ai_bridge"
version = "0.0.0"
description = "Week 3 AI Bridge package for ROS 2 learning module"
authors = ["student <student@todo.todo>"]
license = "TODO: License declaration"

[tool.setuptools]
py-modules = ["week3_ai_bridge"]

[build-system]
requires = ["setuptools", "ament_copyright", "ament_flake8", "ament_pep257"]
build-backend = "setuptools.build_meta"